Bug 81546: Don't add a dummy reflow request if we are in the middle of reflow; this was added by textareas in XHTML documents, and never removed, which prevented them from displaying.  r=waterson@netscape.com,sr=attinasi@netscape.com